# OCRmyPDF-AzureOCR

./: .env_example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
ocrmypdf_azureocr/: __init__.py  _azureocr.py  _cv.py  _pdf.py  py.typed
tests/: conftest.py  test_basic.py
