[project]
name = "ocrmypdf-azureocr"
version = "0.1.0"
description = "Plugin to run OCRmyPDF with the AzureOCR engine"
authors = [{ name = "James R. Barlow", email = "james@purplerock.ca" }]
dependencies = [
    "ocrmypdf>=14.2.1",
    "Pillow>=10.0.1",
    "opencv-python>=4.8.0.74",
    "numpy>=1.20",
    "torch",
    "azure-ai-formrecognizer",
    "azure.core",
    "python-dotenv"
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.entry-points]

[project.entry-points.ocrmypdf]
ocrmypdf = "ocrmypdf_azureocr"

[project.optional-dependencies]
dev = ["ruff>=0.0.272"]
test = [
  "pytest>=6.2.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ocrmypdf_azureocr = ["pdf.ttf", "py.typed"]
